[gd_scene load_steps=4 format=2]

[ext_resource path="res://LevelEditor.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.698039, 0.411765, 0.156863, 1 )

[node name="LevelEditor" type="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -1080.0
margin_right = 1920.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 261.0
margin_bottom = 188.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_right = 261.0
margin_bottom = 14.0
text = "Node to Spawn"

[node name="ObjectSelectCont" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 261.0
margin_bottom = 38.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ObjectButton" type="Button" parent="HBoxContainer/VBoxContainer/ObjectSelectCont"]
margin_right = 58.0
margin_bottom = 20.0
focus_next = NodePath("../../CreateButton")
focus_previous = NodePath("../../../OffsetContainer/CountLine")
text = "Change"

[node name="NameLabel" type="Label" parent="HBoxContainer/VBoxContainer/ObjectSelectCont"]
margin_left = 62.0
margin_top = 2.0
margin_right = 98.0
margin_bottom = 18.0
custom_styles/normal = SubResource( 1 )
text = "Node"
valign = 1

[node name="CreateButton" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 261.0
margin_bottom = 56.0
focus_next = NodePath("../ParentCheckbox")
focus_previous = NodePath("../ObjectSelectCont/ObjectButton")
custom_styles/normal = SubResource( 2 )
text = "Create"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParentCheckbox" type="CheckBox" parent="HBoxContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 261.0
margin_bottom = 84.0
focus_next = NodePath("../../OffsetContainer/HBoxContainer/X")
focus_previous = NodePath("../CreateButton")
text = "Parent new object to selected node?"

[node name="OffsetContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 265.0
margin_right = 447.0
margin_bottom = 188.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OffsetLabel" type="Label" parent="HBoxContainer/OffsetContainer"]
margin_right = 182.0
margin_bottom = 14.0
text = "Offset"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/OffsetContainer"]
margin_top = 18.0
margin_right = 182.0
margin_bottom = 44.0

[node name="X" type="LineEdit" parent="HBoxContainer/OffsetContainer/HBoxContainer" groups=[
"FloatInputs",
]]
margin_right = 58.0
margin_bottom = 26.0
rect_min_size = Vector2( 50, 20 )
focus_neighbour_right = NodePath("../Y")
focus_next = NodePath("../Y")
focus_previous = NodePath("../../../VBoxContainer/ObjectSelectCont/ObjectButton")
text = "0"
context_menu_enabled = false
clear_button_enabled = true

[node name="Y" type="LineEdit" parent="HBoxContainer/OffsetContainer/HBoxContainer" groups=[
"FloatInputs",
]]
margin_left = 62.0
margin_right = 120.0
margin_bottom = 26.0
focus_next = NodePath("../Z")
focus_previous = NodePath("../X")
text = "0"
clear_button_enabled = true

[node name="Z" type="LineEdit" parent="HBoxContainer/OffsetContainer/HBoxContainer" groups=[
"FloatInputs",
]]
margin_left = 124.0
margin_right = 182.0
margin_bottom = 26.0
rect_min_size = Vector2( 50, 20 )
focus_neighbour_left = NodePath("../Y")
focus_next = NodePath("../../RotationContainer/RotX")
focus_previous = NodePath("../Y")
text = "0"
clear_button_enabled = true

[node name="RotationLabel" type="Label" parent="HBoxContainer/OffsetContainer"]
margin_top = 48.0
margin_right = 182.0
margin_bottom = 62.0
text = "Rotation"

[node name="RotationContainer" type="HBoxContainer" parent="HBoxContainer/OffsetContainer"]
margin_top = 66.0
margin_right = 182.0
margin_bottom = 92.0

[node name="RotX" type="LineEdit" parent="HBoxContainer/OffsetContainer/RotationContainer" groups=[
"FloatInputs",
]]
margin_right = 58.0
margin_bottom = 26.0
rect_min_size = Vector2( 50, 20 )
focus_next = NodePath("../RotY")
focus_previous = NodePath("../../HBoxContainer/Z")
text = "0"
context_menu_enabled = false
clear_button_enabled = true

[node name="RotY" type="LineEdit" parent="HBoxContainer/OffsetContainer/RotationContainer" groups=[
"FloatInputs",
]]
margin_left = 62.0
margin_right = 120.0
margin_bottom = 26.0
focus_next = NodePath("../RotZ")
focus_previous = NodePath("../RotX")
text = "0"
clear_button_enabled = true

[node name="RotZ" type="LineEdit" parent="HBoxContainer/OffsetContainer/RotationContainer" groups=[
"FloatInputs",
]]
margin_left = 124.0
margin_right = 182.0
margin_bottom = 26.0
rect_min_size = Vector2( 50, 20 )
focus_next = NodePath("../../HBoxContainer2/InitialX")
focus_previous = NodePath("../RotY")
text = "0"
clear_button_enabled = true

[node name="Initial Offset" type="Label" parent="HBoxContainer/OffsetContainer"]
margin_top = 96.0
margin_right = 182.0
margin_bottom = 110.0
text = "Initial Offset"

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/OffsetContainer"]
margin_top = 114.0
margin_right = 182.0
margin_bottom = 140.0

[node name="InitialX" type="LineEdit" parent="HBoxContainer/OffsetContainer/HBoxContainer2" groups=[
"FloatInputs",
]]
margin_right = 58.0
margin_bottom = 26.0
rect_min_size = Vector2( 50, 20 )
focus_neighbour_right = NodePath("../Y")
focus_next = NodePath("../InitialY")
focus_previous = NodePath("../../RotationContainer/RotZ")
text = "0"
context_menu_enabled = false
clear_button_enabled = true

[node name="InitialY" type="LineEdit" parent="HBoxContainer/OffsetContainer/HBoxContainer2" groups=[
"FloatInputs",
]]
margin_left = 62.0
margin_right = 120.0
margin_bottom = 26.0
focus_next = NodePath("../InitialZ")
focus_previous = NodePath("../InitialX")
text = "0"
clear_button_enabled = true

[node name="InitialZ" type="LineEdit" parent="HBoxContainer/OffsetContainer/HBoxContainer2" groups=[
"FloatInputs",
]]
margin_left = 124.0
margin_right = 182.0
margin_bottom = 26.0
rect_min_size = Vector2( 50, 20 )
focus_neighbour_left = NodePath("../Y")
focus_next = NodePath("../../CountLine")
focus_previous = NodePath("../InitialY")
text = "0"
clear_button_enabled = true

[node name="Label" type="Label" parent="HBoxContainer/OffsetContainer"]
margin_top = 144.0
margin_right = 182.0
margin_bottom = 158.0
text = "Count"

[node name="CountLine" type="LineEdit" parent="HBoxContainer/OffsetContainer"]
margin_top = 162.0
margin_right = 182.0
margin_bottom = 188.0
rect_min_size = Vector2( 50, 20 )
focus_neighbour_left = NodePath("../Y")
focus_next = NodePath("../../VBoxContainer/ObjectSelectCont/ObjectButton")
focus_previous = NodePath("../HBoxContainer2/InitialZ")
text = "1"
clear_button_enabled = true
[connection signal="button_down" from="HBoxContainer/VBoxContainer/ObjectSelectCont/ObjectButton" to="." method="_on_ObjectButton_button_down"]
[connection signal="button_down" from="HBoxContainer/VBoxContainer/CreateButton" to="." method="_on_CreateButton_button_down"]
[connection signal="focus_exited" from="HBoxContainer/OffsetContainer/CountLine" to="." method="_on_CountLine_focus_exited"]
[connection signal="text_entered" from="HBoxContainer/OffsetContainer/CountLine" to="." method="_on_CountLine_text_entered"]
